flowc/tests/fixtures/resolve_redeclaration_capped.flow
type User = { id: string }
type User = { a: int }
type User = { b: int }
flow f(int) -> int { it }
